[package]
name = "gotham_state"
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/imjamesb/gotham_state/"
description = "A struct store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
